# non-parametric_LinkPrediction

./: .gitignore  CMakeLists.txt  ExtendFunction.cu  ExtendFunction.h  FakeDrand48.cu  FakeDrand48.h  GeneralFunctions.cu  GeneralFunctions.h  InferenceFunctionsNetwork.cu  InferenceFunctionsNetwork.h  README.md  WindowsHeaders.h  gpuAcc.cu  gpuAcc.h  linuxMain.cpp  winMain.cpp
CPU/: ExtendFunction.cpp  ExtendFunction.h  FakeDrand48.cpp  FakeDrand48.h  GLFMEXTENlib.pyx  GeneralFunctions.cpp  GeneralFunctions.h  InferenceFunctions.cpp  InferenceFunctions.h  InferenceFunctionsNetwork.cpp  InferenceFunctionsNetwork.h  main.cpp
GPU/: CMakeLists.txt  Decrypted_Utils.cpp  Decrypted_Utils.h  Deprecated_Utils.cpp  Deprecated_Utils.h  ExtendFunction.cu  ExtendFunction.h  GeneralFunctions.cu  GeneralFunctions.h  GibbsSampler.cu  GibbsSampler.cuh  GpuAcc.cu  GpuAcc.h  InferenceFunctionsNetwork.cu  InferenceFunctionsNetwork.h  LinuxMain.cpp  Log.h  UnitTest.cpp  UnitTest.h  Utils.cu  Utils.h  WinMain.cpp  compile_project  gpuAcc.cu  gpuAcc.h  linuxMain.cpp  sub_job.sh  winMain.cpp
GPU/dataSet/: Adjacency_matrix  Adjacency_matrix.txt  Adjacency_matrix_1000_7_lowNoise.txt  Adjacency_matrix_200_4  Adjacency_matrix_200_4.txt  Adjacency_matrix_800_7_withH  Attribute_matrix  Attribute_matrix.txt  Attribute_matrix_1000_7_lowNoise.txt  Attribute_matrix_1500_7  Attribute_matrix_1500_7.txt  Attribute_matrix_2000_5_withH  Attribute_matrix_200_4  Attribute_matrix_200_4.txt  Attribute_matrix_800_7_withH
GPU/dataSet/facebook/: Adjacency_matrix_facebook_10.txt  Adjacency_matrix_facebook_20.txt  Adjacency_matrix_facebook_4.txt  Adjacency_matrix_facebook_5.txt  compressed_index_facebook_10.txt  compressed_index_facebook_20.txt  compressed_index_facebook_3.txt  compressed_index_facebook_4.txt  compressed_index_facebook_5.txt
dataSet/: Adjacency_matrix_1000_7_lowNoise.txt  Attribute_matrix_1000_7_lowNoise.txt
datasets/Facebook100/: Haverford76_attributes.txt  Reed98_adjacency.txt  Simmons81_attributes.txt  Swarthmore42_attributes.txt  parse_fb100.ipynb  test_after.txt  test_before.txt
(+6 files in other folders)
